--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,8 +14,8 @@
     --active-link: hsl(352, 68%, 77%);
 
     --dark-bg: #212121;
-    --dark-color: #efefef;
-    --light-bg: #efefef;
+    --dark-color: #ffffff9;
+    --light-bg: #ffffff9;
     --light-color: #212121;
 
     --bg: var(--light-bg);
