--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -34,6 +34,8 @@
     .channel-container {
         box-sizing: border-box;
 
+        aspect-ratio: 3 / 2;
+
         border: solid 1px var(--color);
         border-radius: 6px;
 
