--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -19,6 +19,7 @@ header .logo {
 
   color: var(--logo-a-color);
 
+  background-color: var(--color);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
