--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -13,6 +13,8 @@ header {
 }
 
 header .logo {
+  --shadow-size: 5px;
+
   min-height: 5rem;
   height: 100%;
   aspect-ratio: 1;
@@ -26,7 +28,7 @@ header .logo {
 
   border-radius: 100%;
 
-  box-shadow: 0 0 10px 0 var(--color);
+  box-shadow: 0 0 calc(var(--shadow-size)/2) calc(var(--shadow-size)/2) var(--color);
 
   transition: border-radius 1s ease-out;
 }
@@ -54,6 +56,8 @@ header .logo:is(:hover, :focus) {
 
   border: none;
   border-radius: 100vw;
+
+  box-shadow: 0 0 var(--shadow-size) 0 var(--color);
 
   font-size: 1.25rem;
   font-weight: 500;
