--- a/src/components/themeSwitcher.astro
+++ b/src/components/themeSwitcher.astro
@@ -7,7 +7,7 @@ var { defaultTheme } = Astro.props
 <div class="theme-switcher" ={defaultTheme}>
     <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"></svg>
 </div>
-<script>
+<script is:inline>
     var themeAttribute = 'data-theme'
     var themes = [
         'system', 
