--- a/src/styles/components/themeSwitcher.scss
+++ b/src/styles/components/themeSwitcher.scss
@@ -1,16 +1,16 @@
 .theme-switcher {
     --pos: 20px;
     --size: 30px;
-    --padding: 20px;
+    --padding: 10px;
     
     position: absolute;
     top: var(--pos);
     right: var(--pos);
 
     width: var(--size);
-    min-width: calc(var(--padding)*2 + var(--padding)/2);
+    min-width: calc(var(--padding)*2.5);
     height: var(--size);
-    min-height: calc(var(--padding)*2 + var(--padding)/2);
+    min-height: calc(var(--padding)*2 5);
     aspect-ratio: 1;
 
     background-color: var(--color);
