--- a/src/styles/components/themeSwitcher.scss
+++ b/src/styles/components/themeSwitcher.scss
@@ -10,7 +10,7 @@
     width: var(--size);
     min-width: calc(var(--padding)*2.5);
     height: var(--size);
-    min-height: calc(var(--padding)*2 5);
+    min-height: calc(var(--padding)*2.5);
     aspect-ratio: 1;
 
     background-color: var(--color);
