--- a/src/styles/components/themeSwitcher.scss
+++ b/src/styles/components/themeSwitcher.scss
@@ -2,7 +2,7 @@
     --pos: 20px;
     --size: 30px;
     --icon-size: 10px;
-    --padding: calc((var(--size) - var(--icon-size))/2);
+    --padding: calc(var(--size) - var(--icon-size));
     
     position: absolute;
     top: var(--pos);
