--- a/src/styles/components/themeSwitcher.scss
+++ b/src/styles/components/themeSwitcher.scss
@@ -23,7 +23,7 @@
         box-sizing: border-box;
         padding: var(--padding);
 
-        stroke: var(--color);
+        stroke: var(--bg);
 
         border-radius: 50%;
     }
