--- a/src/styles/components/themeSwitcher.scss
+++ b/src/styles/components/themeSwitcher.scss
@@ -30,6 +30,7 @@ $dark-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" view
         height: 100%;
         width: 100%;
         
+        fill: var(--bg);
         stroke: var(--bg);
     }
 }
