--- a/src/components/themeSwitcher.astro
+++ b/src/components/themeSwitcher.astro
@@ -25,7 +25,7 @@ var { defaultTheme } = Astro.props
         var currentTheme = document.documentElement.getAttribute(themeAttribute)
         var newIndex = themes.indexOf(currentTheme) + 1
 
-        changeTheme(currentTheme,)
+        changeTheme(currentTheme)
     })
     changeTheme(0, {target: themeSwitcher})
 
