--- a/src/components/themeSwitcher.astro
+++ b/src/components/themeSwitcher.astro
@@ -10,6 +10,7 @@ var { defaultTheme } = Astro.props
 <script is:inline>
     var themeAttribute = 'data-theme'
     var themes = [
+        'undefined'
         'system', 
         'light', 
         'dark'
@@ -26,7 +27,7 @@ var { defaultTheme } = Astro.props
 
         changeTheme(currentTheme)
     })
-    changeTheme(0)
+    changeTheme(1)
 
     function changeTheme(newIndex) {
         if (newIndex >= themes.length) newIndex = 0
