--- a/src/components/themeSwitcher.astro
+++ b/src/components/themeSwitcher.astro
@@ -24,7 +24,7 @@ var { defaultTheme } = Astro.props
         var currentTheme = document.documentElement.getAttribute(themeAttribute)
         var newIndex = themes.indexOf(currentTheme) + 1
 
-        changeTheme(currentTheme)
+        changeTheme(newIndex)
     }
     changeTheme(0)
 
