--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -21,7 +21,7 @@
 
     --bg: var(--light-bg);
     --color: var(--light-color);
-    --nav-btn-color: var(--color)
+    --nav-btn-color: var(--light-color)
 }
 
 :has(:target), html {
@@ -43,13 +43,13 @@ html {
 [data-theme="light"] {
     --bg: var(--light-bg);
     --color: var(--light-color);
-    --nav-btn-color: var(--color)
+    --nav-btn-color: var(--light-color)
     color-scheme: light;
 }
 [data-theme="dark"] {
     --bg: var(--dark-bg);
     --color: var(--dark-color);
-    --nav-btn-color: var(--dark-color);
+    --nav-btn-color: var(--dark-nav-btn);
     color-scheme: dark;
 }
 
