--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -51,7 +51,7 @@ header .logo:is(:hover, :focus) {
 .nav button {
   padding: 10px 20px;
 
-  background-color: var(--nav-btn-color);
+  background-color: var(--nav-btn-bg);
   color: var(--bg);
 
   border: none;
@@ -61,6 +61,12 @@ header .logo:is(:hover, :focus) {
 
   font-size: 1.25rem;
   font-weight: 500;
+
+  cursor: pointer;
+
+  &::hover {
+    background-color: var(--nav-btn-hover);
+  }
 }
 
 // .nav .current-page {
