--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,6 +7,8 @@ $dark-bg: #212121;
 $dark-color: #fefefe;
 $dark-nav-btn: #f0f0f0;
 
+$change-amt: 10%;
+
 
 * {
     // font-family: 'Montserrat', sans-serif;
