--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,16 +22,10 @@ $change-amt: 10%;
     --logo-a-color: hsl(195, 12%, 94%);
     --active-link: hsl(352, 68%, 77%);
 
-    --light-bg: $light-bg;
-    --light-color: $light-color;
-    --dark-bg: $dark-bg;
-    --dark-color: $dark-color;
-    --dark-nav-btn: $dark-nav-btn;
-
-    --bg: var(--light-bg);
-    --color: var(--light-color);
+    --bg: $light-bg;
+    --color: $light-color;
     
-    --nav-btn-bg: var(--light-color);
+    --nav-btn-bg: $light-color;
     --nav-btn-hover: darken($light-color, $change-amt);
 }
 
@@ -41,9 +35,9 @@ $change-amt: 10%;
 
 @media (preferes-color-scheme: dark) {
     :root {
-        --bg: var(--dark-bg);
-        --color: var(--dark-color);
-        --nav-btn-bg: var(--dark-nav-btn);
+        --bg: $dark-bg;
+        --color: $dark-color;
+        --nav-btn-bg: $dark-nav-btn;
         --nav-btn-hover: lighen($dark-color, $change-amt);
     }
 }
@@ -53,16 +47,16 @@ html {
 }
 
 [data-theme="light"] {
-    --bg: var(--light-bg);
-    --color: var(--light-color);
-    --nav-btn-bg: var(--light-color);
+    --bg: $light-bg;
+    --color: $light-color;
+    --nav-btn-bg: $light-color;
     --nav-btn-hover: darken($light-color, $change-amt);
     color-scheme: light;
 }
 [data-theme="dark"] {
-    --bg: var(--dark-bg);
-    --color: var(--dark-color);
-    --nav-btn-bg: var(--dark-nav-btn);
+    --bg: $dark-bg;
+    --color: $dark-color;
+    --nav-btn-bg: $dark-nav-btn;
     --nav-btn-hover: lighen($dark-color, $change-amt);
     color-scheme: dark;
 }
