--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-$light-bg: #fefefe;
-$light-color: #212121;
-$light-nav-btn: #2F2F2F;
+$light-bg: hsl(0, 0%, 100%);
+$light-color: hsl(0, 0%, 13%);
+$light-nav-btn: hsl(0, 0%, 25%);
 
-$dark-bg: #212121;
-$dark-color: #fefefe;
-$dark-nav-btn: #f0f0f0;
+$dark-bg: hsl(0, 0%, 13%);
+$dark-color: hsl(0, 0%, 100%);
+$dark-nav-btn: hsl(0, 0%, 63%);
 
 $change-amt: 10%;
 
