--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -48,7 +48,7 @@ header .logo:is(:hover, :focus) {
   gap: 15px;
 }
 
-.nav button {
+.nav-btn {
   padding: 10px 20px;
 
   background-color: var(--nav-btn-bg);
