--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -50,9 +50,9 @@ header .logo:is(:hover, :focus) {
 }
 
 .nav-btn {
-  flex: 1;
-
   padding: 10px 20px;
+
+  min-width: var(--min-width, fit-content);
 
   background-color: var(--nav-btn-bg);
   color: var(--bg);
