--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -19,6 +19,12 @@ var { logo } = Astro.props
     </nav>
 </header>
 <script is:inline>
+    var maxWidth = 0
+    document.querySelectorAll('.nav-btn').forEach(function(b, i) {
+        if (b.clientWidth > maxWidth) maxWidth = b.clientWidth
+    })
+    document.querySelector('.nav-btn').parentNode.style.setProperty('--max-width', `${maxWidth/16}rem`)
+
     function goToUrl(btn, target) {
         var link = btn
         if (!!target === false) target = '_self'
