--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -19,11 +19,11 @@ var { logo } = Astro.props
     </nav>
 </header>
 <script is:inline>
-    var maxWidth = 0
+    var largestWidth = 0
     document.querySelectorAll('.nav-btn').forEach(function(b, i) {
-        if (b.clientWidth > maxWidth) maxWidth = b.clientWidth
+        if (b.clientWidth > largestWidth) largestWidth = b.clientWidth
     })
-    document.querySelector('.nav-btn').parentNode.style.setProperty('--max-width', `${maxWidth/16}rem`)
+    document.querySelector('.nav-btn').parentNode.style.setProperty('--min-width', `${largestWidth/16}rem`)
 
     function goToUrl(btn, target) {
         var link = btn
