--- a/src/styles/components/themeSwitcher.scss
+++ b/src/styles/components/themeSwitcher.scss
@@ -4,9 +4,9 @@
     --icon-size: 20px;
     --padding: calc((var(--size) - var(--icon-size))/2);
     
-    position: absolute;
-    top: var(--pos);
-    right: var(--pos);
+    position: fixed;
+    // top: var(--pos);
+    // right: var(--pos);
 
     box-sizing: border-box;
     padding: var(--padding);
