--- a/src/styles/components/themeSwitcher.scss
+++ b/src/styles/components/themeSwitcher.scss
@@ -6,7 +6,7 @@
     
     position: fixed;
     // top: var(--pos);
-    // right: var(--pos);
+    right: var(--pos);
 
     box-sizing: border-box;
     padding: var(--padding);
