--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -31,6 +31,7 @@ var { logo } = Astro.props
     function goToUrl(btn, target) {
         var link = btn
         if (!!target === false) target = '_self'
+        console.log(!!target)
         if (typeof link !== 'string') {
             link = btn.getAttribute('url')
             target = btn.getAttribute('target')
@@ -39,7 +40,6 @@ var { logo } = Astro.props
             }
         }
         if (!!link === false) link = '/'
-        console.log(target)
         if (target === '_blank') {
             window.open(link)
         }
