--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -30,7 +30,7 @@ var { logo } = Astro.props
 
     function goToUrl(btn, target) {
         var link = btn
-        if (!!target === false || target === null) target = '_self'
+        if (!!target === false || target == null) target = '_self'
         console.log(!!target)
         if (typeof link !== 'string') {
             link = btn.getAttribute('url')
