--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -93,17 +93,17 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <div class="item">
-        <a href="https://Magic-8-Ball.adarshrkumar.dev" target="_blank" class="image-link" />
+        <a href="https://assstant.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Magic-8-Ball.adarshrkumar.dev" target="_blank">
-            <h3>My Magic-8-Ball Game</h3>
+          <a href="https://assistant.adarshrkumar.dev" target="_blank">
+            <h3>Assistant</h3>
           </a>
           <div class="description">
-            <span>Play Magic-8-Ball Online!</span>
+            <span>A GPT-4 Based Full Virtual Assistant!</span>
           </div>
         </div>
       </div>
-      <div class="item">
+      <!-- <div class="item">
         <a href="https://Rock-Paper-Scissors.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
           <a href="https://Rock-Paper-Scissors.adarshrkumar.dev" target="_blank">
@@ -113,7 +113,7 @@ import SiteGridContent from '../components/SiteGridContent.astro'
             <span>Play Rock-Paper-Scissors Online!</span>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- <div class="item">
         <a href="https://Cookie-Clicker.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
