--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -87,6 +87,8 @@
         background-position: center;
         background-repeat: no-repeat;
 
+        outline: none;
+
         // &:hover, &:focus, &:focus-visible, .hasTitle & {
             border-bottom: solid 1px var(--foreground-tertiary-color);
         // }
