--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,9 +5,15 @@ $light-bg: hsl(0, 0%, 95%);
 $light-color: hsl(0, 0%, 15%);
 $light-nav-btn: hsl(0, 0%, 30%);
 
+$light-link-color: #0000EE;
+$light-link-visited: #551A8B;
+
 $dark-bg: hsl(0, 0%, 15%);
 $dark-color: hsl(0, 0%, 95%);
 $dark-nav-btn: hsl(0, 0%, 70%);
+
+$dark-link-color: #0000EE;
+$dark-link-visited: #551A8B;
 
 $change-amt: 10%;
 
