--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,16 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-$light-bg: hsl(0, 0%, 97.5%);
-$light-color: hsl(0, 0%, 15%);
-$light-nav-btn: hsl(0, 0%,42.5%);
+$main-bg-lightness: 100%;
+$main-color-lightness: 15%;
+$main-nav-lightness: 45.5%;
+
+$light-bg: hsl(0, 0%, $main-bg-lightness);
+$light-color: hsl(0, 0%, $main-color-lightness);
+$light-nav-btn: hsl(0, 0%, calc(000% - $main-nav-lightness));
 
 $light-link-color: #0000EE;
 $light-link-visited: #551A8B;
 
-$dark-bg: hsl(0, 0%, 15%);
-$dark-color: hsl(0, 0%, 97.5%);
-$dark-nav-btn: hsl(0, 0%, 62.5%);
+$dark-bg: hsl(0, 0%, $main-color-lightness);
+$dark-color: hsl(0, 0%, $main-bg-lightness);
+$dark-nav-btn: hsl(0, 0%, calc(100% - $main-nav-lightness));
 
 $dark-link-color: #0000EE;
 $dark-link-visited: #551A8B;
