--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -1,8 +1,11 @@
 ---
 import '../styles/components/sidebar.scss'
+
+import Nav from './sidebarNav.astro'
 ---
 <aside class="main-sidebar">
     <section class="channel-stats"></section>
+    <Nav />
 </aside>
 <script src="https://apis.google.com/js/platform.js"></script>
 <script src="/channels.js" is:inline></script>
