--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -5,7 +5,7 @@ import Nav from './sidebarNav.astro'
 ---
 <aside class="main-sidebar">
     <section class="channel-stats"></section>
-    <Nav />
+    <Nav direction="column" />
 </aside>
 <script src="https://apis.google.com/js/platform.js"></script>
 <script src="/channels.js" is:inline></script>
