--- a/src/components/sidebarNav.astro
+++ b/src/components/sidebarNav.astro
@@ -6,7 +6,7 @@ import ThemeSwitcher from '../components/themeSwitcher.astro'
 var { direction } = Astro.props
 
 ---
-<nav class="nav" data-direction="column">
+<nav class="nav" data-direction={direction}">
     <button url="/" class="nav-btn" onclick="goToUrl(this)">Home</button>
     <button url="/about" class="nav-btn" onclick="goToUrl(this)">About</button>
     <button url="/contact" class="nav-btn" onclick="goToUrl(this)">Contact</button>
