--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/components/header.scss'
 
+import Nav from '../components/nav.astro'
 import ThemeSwitcher from '../components/themeSwitcher.astro'
 
 var { logo } = Astro.props
@@ -8,16 +9,6 @@ var { logo } = Astro.props
 ---
 <header id="header">
     <a class="logo" href="/" style={`background-image: url('${logo}');`}></a>
-    <nav class="nav">
-        <button url="/" class="nav-btn" onclick="goToUrl(this)">Home</button>
-        <button url="/about" class="nav-btn" onclick="goToUrl(this)">About</button>
-        <button url="/contact" class="nav-btn" onclick="goToUrl(this)">Contact</button>
-        <button url="/portfolio" class="nav-btn" onclick="goToUrl(this)">Portfolio</button>
-        <button url="/projects" class="nav-btn" onclick="goToUrl(this)">Projects</button>
-        <button url="https://blog.adarshkumar.dev" target="_blank" class="nav-btn" onclick="goToUrl(this)">Blog</button>
-   <!-- <button url="/sites" class="nav-btn" onclick="goToUrl(this)">Sites</button> -->
-        <button url="/videos" class="nav-btn" onclick="goToUrl(this)">Videos</button>
-   <!-- <button url="/music" class="nav-btn" onclick="goToUrl(this)">Music</button> -->
-    </nav>
+    <Nav />
     <ThemeSwitcher defaultTheme="system"/>
 </header>
