--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/components/header.scss'
+import '../styles/components/nav.scss'
 
 import ThemeSwitcher from '../components/themeSwitcher.astro'
 
