--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,7 +55,7 @@ if (className.startsWith(' ')) className = className.substring(1)
       </div>
     </HeaderScripts>
     <script src="/main.js" is:inline></script>
-    <!-- <script src="/eruda.js" is:inline></script> -->
+    <script src="/eruda.js" is:inline></script>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
