--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -7,7 +7,7 @@ var { direction, varient } = Astro.props
 if (!!varient === false) varient = 'header'
 
 ---
-<nav class="nav" data-direction={direction}" data-varient={varient}>
+<nav class="nav" data-direction={direction} data-varient={varient}>
     <button url="/" class="nav-btn" onclick="goToUrl(this)">Home</button>
     <button url="/about" class="nav-btn" onclick="goToUrl(this)">About</button>
     <button url="/contact" class="nav-btn" onclick="goToUrl(this)">Contact</button>
