--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,7 +45,7 @@ if (className.startsWith(' ')) className = className.substring(1)
     <NavScripts>
       <Header logo={logoSRC} />
       <div class="wrapper">
-        <main id="content">
+        <main class="content" id="content">
           <h1 class="page-title">{pTitle}</h1>
           <div class={`page-area ${className}`} style={inlineStyles}>
             <slot />
