--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -1,7 +1,3 @@
-.wrapper {
-    grid-template-columns: 1fr auto;
-}
-
 .main-sidebar {
     height: 100%;
     padding: 1rem;
@@ -15,6 +11,15 @@
 
     & > * {
         height: fit-content;
+    }
+}
+
+@media (min-width: 492px) {
+    .wrapper {
+        display: flex;
+    }
+    .main-content {
+        flex: 1;
     }
 }
 
